--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: rsample_app_test
+  database: sample_app_test
   pool: 5
   timeout: 5000
   username: favila
